--- a/package.json
+++ b/package.json
@@ -7,28 +7,32 @@
     "doc": "docs"
   },
   "dependencies": {
+    "dayjs": "^1.8.23",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
     "html-minifier": "^4.0.0",
-    "sass": "^1.25.0"
+    "sass": "^1.25.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "clean": "rimraf dist",
     "eleventy:build": "eleventy",
-    "eleventy:serve-1": "npm run clean && set ELEVENTY_ENV=development & eleventy --serve --port 8080 --watch",
-    "eleventy:serve-2": "set DEBUG=Eleventy* & eleventy --serve --port 8080 --watch",
+    "eleventy:serve": "npm run clean && set ELEVENTY_ENV=\"development\" && npm run tsc && eleventy --serve --port 10033 --watch",
+    "eleventy:debug": "set DEBUG=\"Eleventy*\" && npm run tsc && eleventy --serve --port 10033 --watch",
     "eleventy:build-quietly": "eleventy --quiet",
     "eleventy:help": "eleventy --help",
     "lint:es": "eslint ./",
+    "tsc:init": "tsc --init",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/damien-bayes/bayesian-packer_client.git"
   },
-  "keywords": [],
+  "keywords": ["Bayesian Ecosystem", "Bayesian Family", "Bayesian Packer"],
   "author": "Damien Bayes <damien.bayes.db@gmail.com>",
   "license": "MIT",
   "bugs": {
