--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,8 +22,8 @@ http {
   client_body_buffer_size 128k;
   client_max_body_size 10m;
   client_header_buffer_size 1k;
-  large_client_header_buffers 44k;
-  output_buffers 132k;
+  large_client_header_buffers 4 4k;
+  output_buffers 1 32k;
   postpone_output 1460;
 
   client_header_timeout 3m;
@@ -54,7 +54,7 @@ http {
   gzip_vary on;
   gzip_proxied any;
   gzip_comp_level 6;
-  gzip_buffers 168k;
+  gzip_buffers 16 8k;
   gzip_http_version 1.1;
   gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
