--- a/nginx/custom-errors.conf
+++ b/nginx/custom-errors.conf
@@ -1,41 +1,41 @@
-error_page 401 /401.html;
-location = /401.html {
+error_page 401 /exceptions/401/index.html;
+location = /exceptions/401/index.html {
   root /usr/share/nginx/html;
   internal;
 }
 
-error_page 403 /403.html;
-location = /403.html {
+error_page 403 /exceptions/403/index.html;
+location = /exceptions/403/index.html {
   root /usr/share/nginx/html;
   internal;
 }
 
-error_page 404 /404.html;
-location = /404.html {
+error_page 404 /exceptions/404/index.html;
+location = /exceptions/404/index.html {
   root /usr/share/nginx/html;
   internal;
 }
 
-error_page 405 /405.html;
-location = /405.html {
+error_page 405 /exceptions/405/index.html;
+location = /exceptions/405/index.html {
   root /usr/share/nginx/html;
   internal;
 }
 
-error_page 406 /406.html;
-location = /406.html {
+error_page 406 /exceptions/406/index.html;
+location = /exceptions/406/index.html {
   root /usr/share/nginx/html;
   internal;
 }
 
-error_page 412 /412.html;
-location = /412.html {
+error_page 412 /exceptions/412/index.html;
+location = /exceptions/412/index.html {
   root /usr/share/nginx/html;
   internal;
 }
 
-error_page 500 502 503 504 /50x.html;
-location = /50x.html {
+error_page 500 502 503 504 /exceptions/50x/index.html;
+location = /exceptions/50x/index.html {
   root /usr/share/nginx/html;
   internal;
 }
