--- a/nginx/custom-errors.conf
+++ b/nginx/custom-errors.conf
@@ -1,3 +1,9 @@
+# Configuration of the custom errors
+#
+# Project: Baythium Packer
+# File: /nginx/custom-errors.conf
+# Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+
 error_page 401 /exceptions/401/index.html;
 location = /exceptions/401/index.html {
   root /usr/share/nginx/html;
