--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,9 @@
+# Nginx Configuration
+#
+# Project: Baythium Packer
+# File: /nginx/nginx.conf
+# Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+
 user nginx;
 worker_processes 1;
 pid /var/run/nginx.pid;
