--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -1,6 +1,18 @@
+# Default Nginx Configuration
+#
+# Project: Baythium Packer
+# File: /nginx/nginx.default.conf
+# Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+
 server {
   listen 80;
-  server_name localhost;
+  server_name packer.bayesianflow.space;
+  return 308 https://packer.baythium.com$request_uri;
+}
+
+server {
+  listen 80;
+  server_name packer.baythium.com localhost;
 
   # charset koi8-r;
   # access_log /var/log/nginx/log/host.access.log main;
