--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@damien-bayes/baythium-aspectus_package": "^1.0.3",
+    "@damien-bayes/baythium-vector_package": "^1.0.1",
     "dayjs": "^1.8.23",
     "nunjucks": "^3.2.1"
   },
