--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "baythium-packer_client",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "Effectively archive your large-scale infrastructure data using our powerful and lightweight command-line tool",
   "main": ".eleventy.js",
   "directories": {
     "doc": "docs"
   },
   "dependencies": {
-    "@damien-bayes/baythium-aspectus_package": "^1.0.10",
+    "@damien-bayes/baythium-aspectus_package": "^1.0.13",
     "@damien-bayes/baythium-vector_package": "^1.0.4",
+    "axios": "^0.19.2",
     "dayjs": "^1.8.23",
     "nunjucks": "^3.2.1"
   },
