--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,8 @@ events {
 }
 
 http {
-  # Basic Settings
+  # BASIC SETTINGS
+
   sendfile on;
   tcp_nopush on;
   tcp_nodelay on;
@@ -26,7 +27,10 @@ http {
   # more_set_headers 'Server: Microsoft-IIS/8.5';
 
   client_body_buffer_size 128k;
+
+  # Set the maximum allowed file upload size
   client_max_body_size 10m;
+
   client_header_buffer_size 1k;
   large_client_header_buffers 4 4k;
   output_buffers 1 32k;
@@ -54,6 +58,7 @@ http {
   error_page 412 /exceptions/412/index.html;
   error_page 500 502 503 504 /exceptions/50x/index.html;
 
+  # NOTE: You meed to disable gzip to avoid the removal of the ETag header
   gzip on;
   gzip_disable "MSIE [1-6].(?!.*SV1)";
 
