--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,7 +58,7 @@ http {
   error_page 412 /exceptions/412/index.html;
   error_page 500 502 503 504 /exceptions/50x/index.html;
 
-  # NOTE: You meed to disable gzip to avoid the removal of the ETag header
+  # NOTE: You need to disable gzip to avoid the removal of the ETag header
   gzip on;
   gzip_disable "MSIE [1-6].(?!.*SV1)";
 
