--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -28,4 +28,10 @@ server {
   location ~ /\.ht {
     deny  all;
   }
+
+  # Allow visitors to cache static files 
+  location ~* .(?:jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ { 
+    expires 7d; 
+    access_log off; 
+  } 
 }
