--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -33,5 +33,15 @@ server {
   location ~* .(?:jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ { 
     expires 7d; 
     access_log off; 
+  }
+
+  location /api { 
+    error_page 403 /exceptions/403/index.html; 
+    allow 10.10.0.0/16; 
+    deny all; 
+  } 
+
+  location = /exceptions/403/index.html { 
+    allow all; 
   } 
 }
