--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,8 @@ http {
   client_max_body_size 10m;
 
   client_header_buffer_size 1k;
+
+  # NOTE: If cookie data exceeds a certain size, the error is caused by an overly large header field sent by the client
   large_client_header_buffers 4 4k;
   output_buffers 1 32k;
   postpone_output 1460;
