--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -43,5 +43,10 @@ server {
 
   location = /exceptions/403/index.html { 
     allow all; 
-  } 
+  }
+
+  # Match any request for gif/jpg/jpeg/png files and proxy pass to the object-storage server
+  # location ~* .(gif|jpg|jpeg|png)$ {
+  #   proxy_pass https://static.baythium.com;
+  # } 
 }
