--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,11 @@
 # File: /nginx/nginx.conf
 # Initial author: Damien Bayes <damien.bayes.db@gmail.com>
 
-user nginx;
-worker_processes 1;
+# Specify a user account and group
+user nginx nginx;
+
+# Start functioning with a single worker process
+worker_processes 1; # 4
 pid /var/run/nginx.pid;
 
 events {
@@ -15,7 +18,7 @@ events {
 }
 
 http {
-  # BASIC SETTINGS
+  # SPECIFIC SETTINGS FOR THE DOCKER IMAGE
 
   sendfile on;
   tcp_nopush on;
@@ -45,7 +48,9 @@ http {
   # server_names_hash_bucket_size 64;
   # server_name_in_redirect off;
 
+  # Import a list of file extensions and their associated MIME types
   include /etc/nginx/mime.types;
+
   default_type application/octet-stream;
   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                   '$status $body_bytes_sent "$http_referer" '
