--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -4,12 +4,14 @@
 # File: /nginx/nginx.default.conf
 # Initial author: Damien Bayes <damien.bayes.db@gmail.com>
 
+# Configure a virtual host (packer.bayesianflow.space)
 server {
   listen 80;
   server_name packer.bayesianflow.space;
   return 301 https://packer.baythium.com$request_uri;
 }
 
+# Configure a virtual host (packer.baythium.com)
 server {
   listen 80;
   server_name packer.baythium.com localhost;
