--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -37,10 +37,11 @@ server {
     access_log off; 
   }
 
-  location /api { 
+  location ^~ /api/ { 
     error_page 403 /exceptions/403/index.html; 
     allow 10.10.0.0/16; 
-    deny all; 
+    deny all;
+    access_log off;
   } 
 
   location = /exceptions/403/index.html { 
