--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,7 +32,7 @@ http {
   client_body_buffer_size 128k;
 
   # Set the maximum allowed file upload size
-  client_max_body_size 10m;
+  client_max_body_size 10m; # 2097152k
 
   client_header_buffer_size 1k;
 
