--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,9 +41,9 @@ http {
   output_buffers 1 32k;
   postpone_output 1460;
 
-  client_header_timeout 3m;
-  client_body_timeout 3m;
-  send_timeout 3m;
+  client_header_timeout 180s;
+  client_body_timeout 180s;
+  send_timeout 180s;
 
   # server_names_hash_bucket_size 64;
   # server_name_in_redirect off;
