--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -41,7 +41,8 @@ server {
     error_page 403 /exceptions/403/index.html; 
     allow 10.10.0.0/16; 
     deny all;
-    access_log off;
+    access_log off; # access_log logs/main.log;
+    # log_format main '$pid - $nginx_version - $remote_addr'; 
   } 
 
   location = /exceptions/403/index.html { 
