--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,8 @@
 # Specify a user account and group
 user nginx nginx;
 
+# master_process on;
+
 # Start functioning with a single worker process
 worker_processes 1; # 4
 pid /var/run/nginx.pid;
