--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -53,4 +53,9 @@ server {
   # location ~* .(gif|jpg|jpeg|png)$ {
   #   proxy_pass https://static.baythium.com;
   # } 
+
+  # This directive only applies to documents found in /downloads/
+  location /downloads/ { 
+    gzip off; 
+  } 
 }
