--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -20,6 +20,7 @@ server {
   # access_log /var/log/nginx/log/host.access.log main;
 
   location / {
+    # Define the document root, containing the files you wish to serve to your visitors
     root /usr/share/nginx/html;
     index index.html index.htm;
   }
