--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,6 +33,9 @@ http {
 
   client_body_buffer_size 128k;
 
+  # Limit the transfer rate of individual client connections
+  limit_rate 500k;
+
   # Set the maximum allowed file upload size
   client_max_body_size 10m; # 2097152k
 
