--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
   client_body_buffer_size 128k;
 
   # Limit the transfer rate of individual client connections
-  limit_rate 500k;
+  limit_rate 10m;
 
   # Set the maximum allowed file upload size
   client_max_body_size 10m; # 2097152k
