--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -45,6 +45,9 @@ server {
       deny all;
       access_log off; # access_log logs/main.log;
       # log_format main '$pid - $nginx_version - $remote_addr'; 
+
+      # auth_basic "Authentication required"; 
+      # auth_basic_user_file conf/htpasswd; 
     }
   } 
 
