--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,9 @@
 # File: /nginx/nginx.conf
 # Initial author: Damien Bayes <damien.bayes.db@gmail.com>
 
+# LOAD MODULES
+# load_module /usr/local/nginx/modules/ngx_nchan_module.so;
+
 # Specify a user account and group
 user nginx nginx;
 
