--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,7 @@
 
 # LOAD MODULES
 # load_module /usr/local/nginx/modules/ngx_nchan_module.so;
+# include /usr/share/nginx/modules/*.conf;
 
 # Specify a user account and group
 user nginx nginx;
