--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "eleventy:build": "eleventy",
-    "eleventy:serve-1": "npm run clean && set ELEVENTY_ENV=\"development\" && eleventy --serve --port 10033 --watch",
-    "eleventy:serve-2": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --serve --port 10033 --watch",
-    "eleventy:debug": "set DEBUG=\"Eleventy*\" && eleventy --serve --port 10033 --watch",
-    "eleventy:watch": "eleventy --port 10033 --watch",
-    "eleventy:build-quietly": "eleventy --quiet",
-    "eleventy:help": "eleventy --help",
+    "11ty:build": "eleventy",
+    "11ty:serve-dev": "npm run clean && set ELEVENTY_ENV=\"development\" && eleventy --serve --port 10033 --watch",
+    "11ty:serve-prod": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --serve --port 10033 --watch",
+    "11ty:debug": "set DEBUG=\"Eleventy*\" && eleventy --serve --port 10033 --watch",
+    "11ty:watch": "eleventy --port 10033 --watch",
+    "11ty:build-quietly": "eleventy --quiet",
+    "11ty:help": "eleventy --help",
     "npm:audit": "npm audit fix",
     "eslint:init": "eslint --init",
     "eslint": "eslint ./ --fix",
