--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -23,6 +23,8 @@ server {
     # Define the document root, containing the files you wish to serve to your visitors
     root /usr/share/nginx/html;
     index index.html index.htm;
+
+    include /etc/nginx/naxsi.rules;
   }
 
   include /etc/nginx/custom-errors.conf;
