--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -89,8 +89,10 @@ http {
   open_file_cache_min_uses 3;
 
   # Use CloudFlare DNS and cache results for 1 hour
-  resolver 1.1.1.1 1.0.0.1 valid=1h;
+  # resolver 1.1.1.1 1.0.0.1 valid=1h;
 
-  # Virtual host configurations
+  # Additional configuration imports
   include /etc/nginx/conf.d/*.conf;
+  # include /etc/nginx/sites-enabled/*;
+  include /etc/nginx/naxsi_core.rules;
 }
