--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,14 @@ on:
       - readme.md
     branches:
       - master
-  pull_request:
-    branches:
-      - master
 
 jobs:
   build:
 
-    runs-on: [self-hosted, linux]
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
+
     - name: Build the Docker image
       run: docker build . --file dockerfile --tag baythium-ecosystem/baythium-packer_client:$(date +%s)
