--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deployment
 
 on:
   push:
@@ -9,11 +9,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-18.04
-
     steps:
-    - uses: actions/checkout@v1
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
+        with:
+          node-version: 12
+      - run: npm ci
+      - run: npm run 11ty:build
 
     - name: Build the Docker image
       run: docker build . --file dockerfile --tag baythium-ecosystem/baythium-packer_client:$(date +%s)
