--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,12 +1,10 @@
-name: Integration
-
+name: Deployment
 on:
   push:
     paths-ignore:
       - readme.md
     branches:
       - master
-
 jobs:
   build:
     runs-on: ubuntu-18.04
