--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,12 +1,10 @@
-name: Deployment
-
+name: Integration
 on:
   push:
     paths-ignore:
       - readme.md
     branches:
       - master
-
 jobs:
   build:
     runs-on: ubuntu-18.04
