--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: 12
-      - run: npm ci
+      - run: npm install
