--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,7 +10,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
+      - name: Use Node.js
+        uses: actions/setup-node@v1
         with:
-          node-version: 12
-      - run: npm install
+          node-version: '12.x'
+      - name: Install project dependencies
+        run: npm install
+        run: npm run 11ty:build --if-present
