--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "dependencies": {
-    "@damien-bayes/baythium-aspectus_package": "1.0.13",
+    "@damien-bayes/baythium-aspectus_package": "^1.0.13",
     "@damien-bayes/baythium-vector_package": "1.0.4",
     "axios": "^0.19.2",
     "dayjs": "^1.8.23",
