--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "11ty:serve-prod": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --serve --port 10033 --watch",
     "11ty:debug": "set DEBUG=\"Eleventy*\" && eleventy --serve --port 10033 --watch",
     "11ty:watch": "eleventy --port 10033 --watch",
-    "11ty:build-quietly": "eleventy --quiet",
+    "11ty:build-quietly": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --quiet",
     "11ty:help": "eleventy --help",
     "npm:audit": "npm audit fix",
     "eslint:init": "eslint --init",
