--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -33,3 +33,4 @@ jobs:
           key: ${{ secrets.KEY }}
           source: "dist/*,dockerfile,nginx/*"
           target: "baythium-packer_client"
+  deployment:
