--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -32,5 +32,30 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           key: ${{ secrets.KEY }}
           source: "dist/*,dockerfile,nginx/*"
-          target: "baythium-packer_client"
+          target: "baythium-projects/baythium-packer_client"
+          rm: true
   deployment:
+    name: Connects to the remote machine and builds an image using Docker with further requirements
+    runs-in: ubuntu-18.04
+    needs: integration
+    env:
+      NAME: "Baythium Packer"
+      URL: "https://packer.baythium.com"
+      PATH: "baythium-projects/baythium-packer_client"
+    steps:
+      - name: Start deploying
+        uses: appleboy/ssh-action@master
+        with:
+          envs: NAME,URL,PROJECT_LOCATION
+          host: ${{ secrets.HOSTNAME }}
+          port: ${{ secrets.PORT }}
+          username: ${{ secrets.USERNAME }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          key: ${{ secrets.KEY }}
+          script: |
+          timestamp=$(date +%s)
+          cd $PATH
+          docker rm $(docker stop $(docker ps --filter "name=baythium-packer_client" --format="{{.ID}}"))
+          docker rmi $(docker images | grep "baythium-packer_client")
+          docker build . --file dockerfile --tag baythium-ecosystem/baythium-packer_client:$timestamp
+          docker run -d --name baythium-packer_client --expose 10033 --net baythium-network-1 -e "VIRTUAL_HOST=packer.baythium.com, packer.bayesianflow.space" --restart=on-failure:3 baythium-ecosystem/baythium-packer_client:$timestamp
