--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -36,7 +36,7 @@ jobs:
           rm: true
   deployment:
     name: Connects to the remote machine and builds an image using Docker with further requirements
-    runs-in: ubuntu-18.04
+    runs-on: ubuntu-18.04
     needs: integration
     env:
       NAME: "Baythium Packer"
