--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           PATH: "baythium-projects/baythium-packer_client"
           NAME: "baythium-packer_client"
-          HOST: "packer.baythium.com,packer.bayesianflow.space"
+          VHOST: "packer.baythium.com,packer.bayesianflow.space"
           NETWORK: "baythium-network-1"
           PREFIX: "baythium-ecosystem"
           PORT: "10033"
@@ -25,11 +25,11 @@ jobs:
           username: ${{ secrets.USERNAME }}
           passphrase: ${{ secrets.PASSPHRASE }}
           key: ${{ secrets.KEY }}
-          envs: PATH,NAME,HOST,NETWORK,PREFIX,PORT
+          envs: PATH,NAME,VHOST,NETWORK,PREFIX,PORT
           script: |
             timestamp=$(date +%s)
             cd $PATH
             docker rm $(docker stop $(docker ps --filter "name=$NAME" --format="{{.ID}}"))
             docker rmi $(docker images | grep "$NAME")
             docker build . --file dockerfile --tag $PREFIX/$NAME:$timestamp
-            docker run -d --name $NAME --expose $PORT --net  -e "VIRTUAL_HOST=$HOST" --restart=on-failure:3 $PREFIX/$NAME:$timestamp
+            docker run -d --name $NAME --expose $PORT --net $NETWORK -e "VIRTUAL_HOST=$VHOST" --restart=on-failure:3 $PREFIX/$NAME:$timestamp
