--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -21,7 +21,7 @@ jobs:
           script: |
             timestamp=$(date +%s)
             cd baythium-projects/baythium-packer_client
-            docker rm $(docker stop $(docker ps --filter "name=baythium-packer_client" --format="{{.ID}}"))
+            docker rm $(docker stop $(docker ps -a --filter "name=baythium-packer_client" --format="{{.ID}}"))
             docker rmi $(docker images | grep "baythium-packer_client")
             docker build . --file dockerfile --tag baythium-ecosystem/baythium-packer_client:$timestamp
             docker run -d --name baythium-packer_client --expose 10033 --net baythium-network-1 -e "VIRTUAL_HOST=packer.baythium.com,packer.bayesianflow.space" --restart=on-failure:3 baythium-ecosystem/baythium-packer_client:$timestamp
