--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -94,5 +94,5 @@ http {
   # Additional configuration imports
   include /etc/nginx/conf.d/*.conf;
   # include /etc/nginx/sites-enabled/*;
-  include /etc/nginx/naxsi_core.rules;
+  # include /etc/nginx/naxsi_core.rules;
 }
