--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -24,7 +24,7 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    include /etc/nginx/naxsi.rules;
+    # include /etc/nginx/naxsi.rules;
   }
 
   include /etc/nginx/custom-errors.conf;
