--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -37,6 +37,7 @@ jobs:
   deployment:
     name: Connects to the remote machine and builds an image using Docker with further requirements
     runs-on: ubuntu-18.04
+    needs: integration
     steps:
       - name: Start deploying
         uses: appleboy/ssh-action@master
