--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -42,7 +42,7 @@ server {
 
   location ^~ /api/ {
     limit_except GET { 
-      error_page 403 /exceptions/403/index.html; 
+      # error_page 403 /exceptions/403/index.html; 
       allow 10.10.0.0/16; 
       deny all;
       access_log off; # access_log logs/main.log;
