--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -53,9 +53,9 @@ server {
     }
   } 
 
-  location = /exceptions/403/index.html { 
-    allow all; 
-  }
+  # location = /exceptions/403/index.html { 
+  #   allow all; 
+  # }
 
   # Match any request for gif/jpg/jpeg/png files and proxy pass to the object-storage server
   # location ~* .(gif|jpg|jpeg|png)$ {
