--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -85,12 +85,12 @@ http {
   gzip_http_version 1.1;
   gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-  open_file_cache max=5000 inactive=180;
-  open_file_cache_min_uses 3;
+  # open_file_cache max=5000 inactive=180;
+  # open_file_cache_min_uses 3;
 
   # Use CloudFlare DNS and cache results for 1 hour
   # resolver 1.1.1.1 1.0.0.1 valid=1h;
-
+ 
   # Additional configuration imports
   include /etc/nginx/conf.d/*.conf;
   # include /etc/nginx/sites-enabled/*;
