--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -35,10 +35,10 @@ server {
   }
 
   # Allow visitors to cache static files 
-  location ~* .(?:jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ { 
-    expires 7d; 
-    access_log off; 
-  }
+  # location ~* .(?:jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ { 
+  #  expires 7d; 
+  #  access_log off; 
+  # }
 
   location ^~ /api/ {
     limit_except GET { 
@@ -63,7 +63,7 @@ server {
   # } 
 
   # This directive only applies to documents found in /downloads/
-  location /downloads/ { 
-    gzip off; 
-  } 
+  # location /downloads/ { 
+  #  gzip off; 
+  # } 
 }
