Baythium Aspectus Integration

--- a/nginx/custom-errors.conf
+++ b/nginx/custom-errors.conf
@@ -1,8 +1,8 @@
 # Configuration of the custom errors
 #
-# Project: Baythium Packer
+# Project: Baythium Packer Client
 # File: /nginx/custom-errors.conf
-# Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+# Organization: Baythium Ecosystem: https://baythium.com
 
 error_page 401 /exceptions/401/index.html;
 location = /exceptions/401/index.html {
