--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,8 @@
 # Nginx Configuration
 #
-# Project: Baythium Packer
+# Project: Baythium Packer Client
 # File: /nginx/nginx.conf
-# Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+# Organization: Baythium Ecosystem: https://baythium.com
 
 # LOAD MODULES
 # load_module /usr/local/nginx/modules/ngx_nchan_module.so;
