--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -1,8 +1,8 @@
 # Default Nginx Configuration
 #
-# Project: Baythium Packer
+# Project: Baythium Packer Client
 # File: /nginx/nginx.default.conf
-# Initial author: Damien Bayes <damien.bayes.db@gmail.com>
+# Organization: Baythium Ecosystem: https://baythium.com
 
 # Configure a virtual host (packer.bayesianflow.space)
 server {
