--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baythium-packer_client",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "Effectively archive your large-scale infrastructure data using our powerful and lightweight command-line tool",
   "main": ".eleventy.js",
   "directories": {
@@ -11,6 +11,7 @@
     "@damien-bayes/baythium-vector_package": "^1.0.4",
     "axios": "^0.19.2",
     "dayjs": "^1.8.23",
+    "gitlog": "^4.0.0",
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "11ty:build": "npm run clean && eleventy",
     "11ty:serve-dev": "npm run clean && set ELEVENTY_ENV=\"development\" && eleventy --serve --port 10033 --watch",
     "11ty:serve-prod": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --serve --port 10033 --watch",
+    "11ty:serve": "npm run 11ty:serve-dev",
     "11ty:debug": "set DEBUG=\"Eleventy*\" && eleventy --serve --port 10033 --watch",
     "11ty:watch": "eleventy --port 10033 --watch",
     "11ty:build-quietly": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --quiet",
